# rhema

./: .gitignore  README.md  package.json
data/: download-biblegateway.py  download-model.ts  precompute-embeddings.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml
src-tauri/crates/api/: Cargo.toml
src-tauri/crates/api/src/: lib.rs
src-tauri/crates/audio/: Cargo.toml
src-tauri/crates/audio/src/: capture.rs  device.rs  error.rs  lib.rs  meter.rs  types.rs  vad.rs
src-tauri/crates/bible/: Cargo.toml
src-tauri/crates/bible/src/: crossref.rs  db.rs  error.rs  lib.rs  lookup.rs  models.rs  search.rs
src-tauri/crates/broadcast/: Cargo.toml
src-tauri/crates/broadcast/src/: lib.rs  ndi.rs
src-tauri/crates/detection/: Cargo.toml
src-tauri/crates/detection/src/: context.rs  error.rs  lib.rs  merger.rs  pipeline.rs  quotation.rs  reading_mode.rs  sentence_buffer.rs  types.rs
src-tauri/crates/detection/src/direct/: automaton.rs  context.rs  detector.rs  fuzzy.rs  parser.rs
src-tauri/crates/detection/src/semantic/: chunker.rs  cloud.rs  detector.rs  embedder.rs  ensemble.rs  hnsw_index.rs  index.rs  mod.rs  onnx_embedder.rs  precompute.rs  synonyms.rs
src-tauri/crates/notes/: Cargo.toml
src-tauri/crates/notes/src/: lib.rs
src-tauri/crates/stt/: Cargo.toml
src-tauri/crates/stt/src/: deepgram.rs  error.rs  keyterms.rs  lib.rs  rest.rs  types.rs
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: bible.rs  broadcast.rs  detection.rs  mod.rs  stt.rs
src/components/: settings-dialog.tsx
src/components/broadcast/: design-canvas.tsx  properties-panel.tsx  theme-designer.tsx  theme-library.tsx
src/components/controls/: transport-bar.tsx
src/components/panels/: detections-panel.tsx  queue-panel.tsx  search-panel.tsx  (+1 more)
src/hooks/: use-detection.ts  use-transcription.ts
src/stores/: broadcast-store.test.ts  index.ts  queue-store.ts  settings-store.ts
src/types/: detection.ts  index.ts  queue.ts
(+1 files in other folders)
